--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <header>
  <div>
-   <a href="">my page</a>
+   <a routerLink="/MyPage" >my page</a>
  </div>
   <div>
     <a href="">contact</a>
   </div>
     <div>
-      <a href="">news</a>
+      <a routerLink="/news">news</a>
     </div>
 </header>
