--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,11 +1,1 @@
-<div class="wrapper">
-<app-header></app-header>
-
-  <div class="container">
-    <div class="content">
-    <app-content></app-content>
-  </div>
-  </div>
-<app-footer></app-footer>
-</div>
-
+<div>News</div>
