--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,10 @@ body, html{
   height: 100%;
   min-height: 100%;
 }
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+
