add contact components, add contact details

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
    <a routerLink="/MyPage" >my page</a>
  </div>
   <div>
-    <a href="">contact</a>
+    <a routerLink="/contacts">contacts</a>
   </div>
     <div>
       <a routerLink="/news">news</a>
