--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,12 +1,2 @@
-<div class="wrapper">
-
-
-  <div class="container">
-    <div class="content">
-      <!--    <app-content></app-content>-->
-      <div>news</div>
-    </div>
-  </div>
-
-</div>
+<app-contact *ngFor="let contact of contacts" [contact]="contact" ></app-contact>
 
