add contact components, add contact details

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,2 +1,2 @@
-<app-contact *ngFor="let contact of contacts" [contact]="contact" ></app-contact>
+<app-contact *ngFor="let contactItem of contacts" [contact]="contactItem" ></app-contact>
 
