--- a/src/app/my-page/my-page.component.html
+++ b/src/app/my-page/my-page.component.html
@@ -1,1 +1,7 @@
-<div>MyPage</div>
+<div class="user_page">
+  <div>
+    <img class="ava_user" src="../../assets/avaContacts1.jpg" alt="img">
+  </div>
+  <div class="user_info"></div>
+
+</div>
