--- a/src/app/my-page/my-page.component.html
+++ b/src/app/my-page/my-page.component.html
@@ -2,6 +2,19 @@
   <div>
     <img class="ava_user" src="../../assets/avaContacts1.jpg" alt="img">
   </div>
-  <div class="user_info"></div>
-
+  <div class="user_info_block">
+    <div class="name_block">
+    <div class="user_name">Denis Stokin</div>
+    <img class="icon_edit_name" src="../../assets/pencil-solid.svg" alt="" (click)="appearanceField()">
+      <input class="input_name_redactor" type="text">
+      <button>изменить</button>
+    </div>
+    <div class="user_info">
+      начинающий фронтенд-разработчик с большим энтузиазмом и стремлением к обучению.
+      Он обладает навыками в HTML, CSS и JavaScript, а также имеет опыт работы с фреймворками,
+      такими как React,Angular. Денис всегда готов учиться и развиваться, чтобы стать лучшим в своем деле.
+      Он обладает отличными коммуникативными навыками и способностью работать в команде. Денис всегда стремится к тому,
+      чтобы его код был чистым и эффективным, и он всегда готов принять вызов и решить сложную задачу.
+    </div>
+  </div>
 </div>
