--- a/src/app/my-page/my-page.component.css
+++ b/src/app/my-page/my-page.component.css
@@ -3,11 +3,22 @@
   height: 200px;
   border: 3px solid #ffffff;
 }
+.user_name{
+  max-width: 300px;
+  width: 100%;
+  word-wrap: break-word;
+}
 .input_name_redactor{
   margin-left: 10px;
   margin-top: 20px;
   height: 20px;
   opacity: 0;
+}
+.button_change{
+  opacity: 0;
+  margin-left: 10px;
+  height: 25px;
+  margin-top: 20px;
 }
 .icon_edit_name{
   cursor: pointer;
